Issue #ED-4333 SCSS support -- All Players alignments and UI issues

--- a/themes/portal/_dark.scss
+++ b/themes/portal/_dark.scss
@@ -1431,5 +1431,7 @@ html[data-mode='darkmode'] {
     .ui.radio.checkbox label {
         color: var(--black);
     }
-
+    .sb-btn-secondary, .sb-btn-primary {
+        color: var(--sb-btn-default-color);
+    }
 }
